--- a/mon-projet-angular/src/app/appareil-view/appareil-view.component.html
+++ b/mon-projet-angular/src/app/appareil-view/appareil-view.component.html
@@ -12,10 +12,8 @@
 
     ></app-appareil>
   </ul>
-  <button class="btn btn-success"
-
-          (click)="onAllumer()">Tout allumer</button>
-  <button class="btn btn-danger"
-
-          (click)="onEteindre()">Tout éteindre</button>
+  <button class="btn btn-success"    (click)="onAllumer()">Tout allumer</button>
+  <button class="btn btn-danger"        (click)="onEteindre()">Tout éteindre</button>
+  <button class="btn btn-primary"           (click)="onSave()">Enregistrer</button>
+  <button class="btn btn-primary"           (click)="onFetch()">Charger</button>
 </div>
